# stdinman

./: Cargo.toml  README.md
.github/workflows/: check.yml
src/: discord.rs  main.rs  stdin.rs
