[package]
name = "stdinman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", features = ["voice"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
songbird = "0.3.2"