[package]
name = "stdinman"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
description = "Pipe audio to discord, unix style"
homepage = "https://github.com/ckcr4lyf/stdinman"
repository = "https://github.com/ckcr4lyf/stdinman"
documentation = "https://github.com/ckcr4lyf/stdinman"
readme = "README.md"
keywords = ["discord", "audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stdinman"
test = false
bench = false

[dependencies]
serenity = { version = "0.11", features = ["voice"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
songbird = "0.3.2"
confy = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.19"
env_logger = "0.10.0"
clap = { version = "4.3.12", features = ["derive"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
